// Vitest Snapshot v1

exports[`Profile > matches snapshot in en 1`] = `
<div
  class="page"
  data-v-98aa2ee3=""
>
  <h1
    data-v-98aa2ee3=""
  >
    Profile 
    <!---->
  </h1>
  <div
    class="toolbar"
    data-v-98aa2ee3=""
  >
    
    
  </div>
  
  
</div>
`;

exports[`Profile > matches snapshot in fr 1`] = `
<div
  class="page"
  data-v-98aa2ee3=""
>
  <h1
    data-v-98aa2ee3=""
  >
    Profil 
    <!---->
  </h1>
  <div
    class="toolbar"
    data-v-98aa2ee3=""
  >
    
    
  </div>
  
  
</div>
`;
